<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_default"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textAppearance="@style/txtLabel" />


            <RadioGroup
                android:id="@+id/page1RadioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:checkedButton="@id/page1RadioBtMale"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/page1RadioBtMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/page1RadioBtFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_top_section"
                    android:text="@string/female" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_section"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/first_name_label"
                    android:textAppearance="@style/txtLabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_name_label"
                    android:textAppearance="@style/txtLabel" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/page1EditTxtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name" />

                <EditText
                    android:id="@+id/page1EditTxtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_section"
                android:text="@string/email_label"
                android:textAppearance="@style/txtLabel" />

            <EditText
                android:id="@+id/page1EditTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_small"
                android:hint="@string/email" />


        </LinearLayout>


        <Button
            android:id="@+id/page1BtNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0"
            android:text="Next"
            android:textAppearance="@style/btNext"></Button>
    </LinearLayout>

</ScrollView>